--- a/gas_sensor.csproj
+++ b/gas_sensor.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.0-rc.2.24473.5" />
+  </ItemGroup>
+
 </Project>
